Line numbers are now anchors: one can send them around and bookmark them to jump to a certain line. They are now also copy&paste-able: for a file SrcFile.cxx and its line 123 the text will be "SrcFile.cxx:123", i.e. idea for setting a breakpoint e.g. in GDB. Factor out the writing of line numbers (from TDocParser::Convert and TDocOutput). Fix the href of the empty source file links for source-less classes.
git-svn-id: http://root.cern.ch/svn/root/trunk@27562 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/etc/html/ROOT.css
+++ b/etc/html/ROOT.css
@@ -688,16 +688,24 @@ div.ln {
    line-height: normal;
    width: 50px;
    text-align: right;
-   color: #CE9201;
-   -moz-user-select: none;
-   -khtml-user-select: none;
-   user-select: none;
    height: 100%;
    border-right: 1px solid #aaaaaa;
 }
-span.ln {
+a.ln {
    display: inline-block;
+   height: 100%;
+   text-decoration:none;
+   color: #CE9201;
    font-size: 80%;
    margin: 0;
    padding: 0 0.2em 0 0;
+}
+span.lnfile {
+   font-size:1%;
+   display: inline-block;
+   overflow: hidden;
+   width: 1px;
+   color: #fff;
+   margin: 0;
+   padding: 0;
 }
